* lots of stuff for subtitle support